--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_SECRET=7cd8d1c509fd0c5e94c20d2334f8ffd0
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:seA1942ttle!@127.0.0.1:3306/test_ideal_groupe
+DATABASE_URL=mysql://root:********@127.0.0.1:3306/test_ideal_groupe
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
